# linkerd-extension-init

./: Cargo.toml  Dockerfile  README.md  deny.toml  justfile
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/docker-build/: action.yml
.github/workflows/: actions.yml  check.yml  integration.yml  markdown.yml  release.yml
src/: main.rs
