[package]
name = "linkerd-extension-init"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2021"
license = "Apache-2.0"
publish = false
homepage = "https://linkerd.io"
repository = "https://github.com/linkerd/linkerd-extension-init"

[features]
default = ["rustls-tls"]
# Vendor openssl to statically link lib
openssl-vendored = ["dep:openssl", "openssl/vendored", "kube/openssl-tls", "kubert/openssl-tls"]
rustls-tls = ["dep:rustls", "rustls/aws-lc-rs", "kube/rustls-tls", "kubert/rustls-tls"]

[dependencies]
anyhow = "1"
json-patch = "4"
jsonptr = "0.7"
kubert = { version = "0.25", features = ["log"] }
openssl = { version = "0.10.71", optional = true }
rustls = { version = "0.23.31", optional = true, default-features = false }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "usage", "env", "std"]

[dependencies.kube]
version = "1.1"
default-features = false
features = ["client", "jsonpatch"]

[dependencies.k8s-openapi]
version = "0.25"
features = ["v1_33"]

[dependencies.tokio]
version = "1"
features = ["macros"]
