[package]
name = "linkerd-extension-init"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2021"
license = "Apache-2.0"
publish = false
homepage = "https://linkerd.io"
repository = "https://github.com/linkerd/linkerd-extension-init"

[dependencies]
anyhow = "1"
json-patch = "4"
jsonptr = "0.7"
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs"] }
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "usage", "env", "std"]

[dependencies.kube]
version = "1.1"
default-features = false
features = ["client", "jsonpatch", "rustls-tls"]

[dependencies.kubert]
version = "0.26"
features = ["log"]
git = "https://github.com/linkerd/linkerd-kubert.git"
tag = "kubert/v0.26.0"

[dependencies.k8s-openapi]
version = "0.28"
features = ["v1_33"]

[dependencies.tokio]
version = "1"
features = ["macros"]
